--- a/goku-admin/index.html
+++ b/goku-admin/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>去你妈的管理系统</title>
-  <link rel="stylesheet" href="./index.css" />
+  <link rel="stylesheet" href="./dist/index.css" />
 </head>
 <body>
 
 <div id="root"></div>
 
-<script src="./index.js"></script>
+<script src="./dist/index.js"></script>
 
 </body>
 </html>
