--- a/goku-admin/index.html
+++ b/goku-admin/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>去你妈的管理系统</title>
+  <title>GOKU管理系统</title>
   <link rel="stylesheet" href="./dist/index.css" />
 </head>
 <body>
