--- a/fontend/public/index.html
+++ b/fontend/public/index.html
@@ -6,14 +6,14 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <title>Dva Demo</title>
   <script src='./antm-viewport.min.js'></script>
-  <link rel="stylesheet" href="/index.css" />
+  <link rel="stylesheet" href="./index.css" />
 </head>
 
 <body>
 
   <div id="root"></div>
 
-  <script src="/index.js"></script>
+  <script src="./index.js"></script>
 
 </body>
 
