--- a/fontend/public/index.html
+++ b/fontend/public/index.html
@@ -7,6 +7,7 @@
   <title>Dva Demo</title>
   <script src='./antm-viewport.min.js'></script>
   <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+  <script src="./wechat/index.js"></script>
   <link rel="stylesheet" href="./index.css" />
 </head>
 
