--- a/fontend/public/index.html
+++ b/fontend/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-  <title>Dva Demo</title>
+  <title>GOKU出行</title>
   <script src='./antm-viewport.min.js'></script>
   <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
   <script src="./wechat/index.js"></script>
