--- a/fontend/index.html
+++ b/fontend/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-  <title>Dva Demo</title>
+  <title>GOKU 出行</title>
   <script src='./wx/dist/antm-viewport.min.js'></script>
   <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
   <link rel="stylesheet" href="./wx/dist/index.css" />
